--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -93,7 +93,7 @@ h1 > span {
 h2{
 	font-family: 'Syne';
 	font-weight: 700;
-	font-size: 30px;
+	font-size: 22px;
 	color: #1D6154;
 	margin-bottom: 50px;
 }
@@ -236,6 +236,22 @@ footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em
+}
+
+/* bandeau mode édition */
+#banner {
+
+	background-color : black;
+	width : 100%;
+	margin: 0;
+	display : block;
+	color: white;
+	text-align: center;
+	font-size: 12px;
+	padding : 20px;
+}
+#banner i {
+	padding-right : 10px;
 }
 
 /* button modifier mes Projets*/
